--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
       { src: 'plugin/markdown/markdown.js' },
       { src: 'plugin/highlight/highlight.js' },
       { src: 'plugin/notes/notes.js', async: true },
+      { src: 'plugin/embed-tweet/embed-tweet.js' },
     ],
   });
   </script>
